--- a/Portfolio-2/package.json
+++ b/Portfolio-2/package.json
@@ -14,8 +14,9 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
-    "react-scroll": "^1.9.0"
+    "react-icons": "^5.3.0",
+    "react-scroll": "^1.9.0",
+    "swiper": "^11.1.10"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
